# uplay-r1-loader

./: Cargo.toml  README.md  Uplay.toml  build.rs  build_inst.txt
src/: global.rs  lib.rs  loader.rs
src/exports/: mod.rs  uplay_ach.rs  uplay_arch.rs  uplay_avatar.rs  uplay_common.rs  uplay_friends.rs  uplay_installer.rs  uplay_metadata.rs  uplay_options.rs  uplay_overlay.rs  uplay_party.rs  uplay_presence.rs  uplay_save.rs  uplay_user.rs  uplay_win.rs
src/helpers/: manifest.rs  mod.rs  save.rs
src/models/: config.rs  manifest.rs
src/types/: mod.rs  uplay_key.rs  uplay_list.rs  uplay_overlapped.rs  uplay_save.rs
